# ATodo

./: .eslintrc.js  .gitignore  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  features.md  issues.md  package-lock.json  package.json  todos.md  tsconfig.json  vite.config.ts
.erb/configs/: .eslintrc
atodo/: App.css  App.tsx  index.html  main.tsx  styles.css
atodo/components/Board/: Board.module.css  Board.tsx
atodo/components/FatherNodeBoard/: FatherNodeBoard.module.css  FatherNodeBoard.tsx
atodo/components/Flow/: Flow.module.css  Flow.tsx  FlowHooks.ts
atodo/components/Head/: Head.module.css  Head.tsx
atodo/components/NowSelectedBoard/: NowSelectedBoard.tsx
atodo/hooks/: useEvent.ts
atodo/state/: tasksAtoms.ts
src/: App.tsx  Channels.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql/: init_table.sql
src-tauri/src/: main.rs
src-tauri/src/sql/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/window/: mod.rs
src/__tests__/: App.test.tsx
src/hooks/: useEvent.ts
src/interface/: storage.ts
src/main/: ChannelsRegister.ts  global.ts  index.ts  main.ts  menu.ts  preload.ts
src/preload/: index.ts
src/renderer/: App.css  App.tsx  index.ejs  index.html  index.tsx
src/state/: eventAtoms.ts  tasksAtoms.ts
src/types/: sql.ts
worker/: App.module.css  App.tsx  index.html  main.tsx  styles.css
worker/components/: TaskShow.module.css  TaskShow.tsx
worker/hooks/: useEvent.ts
worker/lib/: Scheduler.ts  SuspendedTasksManager.ts
worker/state/: tasksAtom.ts
(+108 files in other folders)
